Fix for label image alignment

--- a/root/static/css/customer/style.css
+++ b/root/static/css/customer/style.css
@@ -169,7 +169,6 @@ img { border: none; vertical-align: middle }
 }
 
 #label {
-    width: 400px;
     margin: 0 auto;
 }
 
